[DSTEW-2138] - Add more test coverage.